--- a/front_end/src/components/components.css
+++ b/front_end/src/components/components.css
@@ -1,3 +1,8 @@
+.svg {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
 .baroland__answers-container {
   margin: 16px 0;
   padding: 16px;
